@@ -2,6 +2,8 @@
 
     * Aggiunta la selezione dell'intera riga e la disabilitazione alle modifiche sulle tabelle nella main window.
 
+    * Aggiunta la parte grafica per la visualizzazione delle note nell'activitydialog.
+
 2014-10-23 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Aggiunta la disabilitazione di alcune funzionalita' in base ai privilegi degli utenti.
